# hamux-torch

./: Makefile  README.md  example_mnist.ipynb  pyproject.toml  settings.ini
hamux_torch/: __init__.py  _modidx.py  core.py  lagrangians.py
nbs/: index.ipynb  nbdev.yml
tests/: test_core.py  test_lagrangians.py  test_training.py
