[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamux-torch"
version = "0.1.0"
description = "Hierarchical Associative Memories using Pytorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jaxtyping>=0.2.36",
    "numpy>=2.0.2",
    "torch==2.9.1",
]

[dependency-groups]
dev = [
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]
